example/fail/fail_type11.dl

int $[main]{
    main <- 1; //attempt to change function identifier
    
}

